--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
-        <title>Hello World</title>
+        <title>32191199 김채인 웹페이지</title>
     </head>
 
     <body>
-        <h1>Hello world</h1>
+        <h1>김채인</h1>
+        <img src = "media/chaein.jpg" width="400" height="700" alt="chaein">
     </body>
+
+    
 </html>
