--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>32191199 김채인 웹페이지</title>
-    </head>
+
+    <head><title>32191199 김채인 웹페이지</title>
+        <style>
+            body{background-color: rgb(243, 214, 176);}
+            h1{font-weight: 900; color: rgba(34, 21, 1, 0.708);}
+            hr{border : 3px solid rgba(37, 22, 4, 0.619);}
+        </style>
+        </head>
 
     <body>
-        <h1>김채인</h1>
+        <hr>
+        <h1>안녕하십니까. 단국대학교 소프트웨어학과 19학번 김채인입니다.</h1>
+        <hr>
         <img src = "media/chaein.jpg" width="400" height="700" alt="chaein">
     </body>
 
-    
-</html>
+</html>>    
