--- a/index.html
+++ b/index.html
@@ -14,9 +14,23 @@
             <h1>단국대학교 소프트웨어학과 19학번 김채인</h1>
         </header>
 
-        <img src = "media/chaein.jpg" width="250" height="300" alt="chaein">  
-        <img src = "media/family.jpg"width="300" height="300" alt="family"><br><br>
+        <nav>
+            <ul id = "list">
+                <li><a href="#about me" style="text-decoration:none"><strong> about me</strong></a>
+                <li><a href="#touch" style="text-decoration:none"><strong>Connect</strong></a>
+            </ul>
+        </nav>
 
+        <section>
+            <article id ="about me">
+                <img src = "media/chaein.jpg" width="250" height="300" alt="chaein">  
+                <img src = "media/family.jpg"width="300" height="300" alt="family">
+
+                <p>이름 : 김채인</p>
+            </article>
+
+        </section>
+        
  
 
         <footer>
