--- a/index.html
+++ b/index.html
@@ -16,19 +16,42 @@
 
         <nav>
             <ul id = "list">
-                <li><a href="#about me" style="text-decoration:none"><strong> about me</strong></a>
-                <li><a href="#touch" style="text-decoration:none"><strong>Connect</strong></a>
+                <a href="#aboutMe" style="text-decoration:none"><strong> about me</strong></a>
+                <a href="#Video" style="text-decoration:none"><strong> Video</strong></a>
+                <a href="#Connects" style="text-decoration:none"><strong>Connect</strong></a>
             </ul>
         </nav>
 
         <section>
-            <article id ="about me">
+            <article id ="aboutMe">
+                <h3>About Me</h3><br>
                 <img src = "media/chaein.jpg" width="250" height="300" alt="chaein">  
                 <img src = "media/family.jpg"width="300" height="300" alt="family">
-
-                <p>이름 : 김채인</p>
+                <br><br>
+                <li>이름 : 김채인</li>
+                <li>가족 : 아빠, 엄마, 4녀 중 셋째</li>
+                <li>생년월일 : 2000.03.27</li>
+                <li>mbti : ISFP</li>
+                <li>취미 : 책읽기, 노래부르기</li>
+                <li>특기 : 피자만들기</li>            
+            </article>
+            <br>
+            <article id="Video">
+                <video src="media/sing.mp4"
+                        width="320" height="240"
+                        controls autoplay muted>
+                    브라우저가  video 태그를 지원하지 않습니다.</video>
+                <video src="media/pizzahut.mp4"
+                    width="320" height="240"
+                    controls autoplay muted>
+                브라우저가  video 태그를 지원하지 않습니다.</video>
             </article>
 
+            <article id="Connects">
+
+            </article>
+
+            
         </section>
         
  
