--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
         <section>
             <article id ="aboutMe">
                 <p>About Me</p><br>
-                <img src = "media/chaein.jpg" width="250" height="300" alt="chaein">  
-                <img src = "media/family.jpg"width="300" height="300" alt="family">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><img src = "media/chaein.jpg" width="350" height="450" alt="chaein"></td>
+                            <td><img src = "media/family.jpg"width="430" height="450" alt="family"></td>
+                        </tr>
+                    </tbody>
+                </table>
                 <br><br>
                 <li>이름 : 김채인</li>
                 <li>가족 : 아빠, 엄마, 4녀 중 셋째</li>
@@ -40,18 +46,32 @@
             <br>
             <article id="Video">
                 <p>Video</p><br>
-                <video src="media/sing.mp4"
-                        width="520" height="340"
-                        controls autoplay muted>
-                    브라우저가  video 태그를 지원하지 않습니다.</video>
-                <video src="media/pizzahut.mp4"
-                    width="520" height="340"
-                    controls autoplay muted>
-                브라우저가  video 태그를 지원하지 않습니다.</video>
+
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><video src="media/sing.mp4"
+                                width="520" height="340"
+                                controls autoplay muted>
+                                브라우저가  video 태그를 지원하지 않습니다.</video>
+                            </td>
+                            <td><video src="media/pizzahut.mp4"
+                                width="520" height="340"
+                                controls autoplay muted>
+                                브라우저가  video 태그를 지원하지 않습니다.</video>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </article>
 
             <article id="Connects">
                 <p>Connects</p>
+
+                <li>Email : 32191199@dankook.ac.kr</li><br>
+                <a href="https://www.instagram.com/iiiinnnnnnnyy/"><img src="media/instagram.jfif" width="50" height="50" alt="chaein's instagram"></a>
+                <a href="https://github.com/rlacodls3109"><img src="media/github.png" width="50" height="50" alt="chaein's github"></a>
+                <a href="https://ins-life.tistory.com/"><img src="media/tistory.png" width="50" height="50" alt="chaein's blog"></a>
 
             </article>
             
